Apply suggestions from code review
Co-authored-by: rtobar <rtobar@icrar.org>

--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -1200,9 +1200,9 @@ msgstr ""
 "Este es el recuento de referencias del objeto de tipo, inicializado a ``1`` "
 "por la macro ``PyObject_HEAD_INIT``. Tenga en cuenta que para :ref:"
 "`statically allocated type objects <static-types>`, las instancias del tipo "
-"(objetos cuyo :attr:`ob_type` apunta al tipo) cuentan como referencias "
-"*not*. Pero para :ref:`dynamically allocated type objects <heap-types>`, las "
-"instancias *do* cuentan como referencias."
+"(objetos cuyo :attr:`ob_type` apunta al tipo) *no* cuentan como referencias. "
+"Pero para :ref:`objetos de tipo asignados dinámicamente <heap-types>`, las "
+"instancias *sí* cuentan como referencias."
 
 #: ../Doc/c-api/typeobj.rst:494 ../Doc/c-api/typeobj.rst:517
 #: ../Doc/c-api/typeobj.rst:539 ../Doc/c-api/typeobj.rst:553
@@ -1291,7 +1291,7 @@ msgid ""
 "(see the :option:`configure --with-trace-refs option <--with-trace-refs>`)."
 msgstr ""
 "Estos campos solo están presentes cuando se define la macro "
-"``Py_TRACE_REFS`` (ver el :option:`configure --with-trace-refs option <--"
+"``Py_TRACE_REFS`` (ver la :option:`opción configure --with-trace-refs <--"
 "with-trace-refs>`)."
 
 #: ../Doc/c-api/typeobj.rst:528
@@ -1303,10 +1303,10 @@ msgid ""
 "object into a doubly-linked list of *all* live objects on the heap."
 msgstr ""
 "La macro ``PyObject_HEAD_INIT`` se encarga de su inicialización a ``NULL``. "
-"Para :ref:`statically allocated objects <static-types>`, estos campos "
-"siempre siguen siendo ``NULL``. Para :ref:`dynamically allocated objects "
+"Para :ref:`objetos asignados estáticamente <static-types>`, estos campos "
+"siempre siguen siendo ``NULL``. Para :ref:`objetos asignados dinámicamente "
 "<heap-types>`, estos dos campos se utilizan para vincular el objeto a una "
-"lista doblemente vinculada de objetos activos *all* en el montón."
+"lista doblemente vinculada de *todos* los objetos en el heap."
 
 #: ../Doc/c-api/typeobj.rst:534
 msgid ""
@@ -1334,8 +1334,8 @@ msgid ""
 "initialized to zero. For :ref:`dynamically allocated type objects <heap-"
 "types>`, this field has a special internal meaning."
 msgstr ""
-"Para :ref:`statically allocated type objects <static-types>`, debe "
-"inicializarse a cero. Para :ref:`dynamically allocated type objects <heap-"
+"Para :ref:`objetos de tipo estáticamente asignados <static-types>`, debe "
+"inicializarse a cero. Para :ref:`objetos de tipo dinámicamente asignados <heap-"
 "types>`, este campo tiene un significado interno especial."
 
 #: ../Doc/c-api/typeobj.rst:559
@@ -1382,7 +1382,7 @@ msgid ""
 "be the type name, and the module name explicitly stored in the type dict as "
 "the value for key ``'__module__'``."
 msgstr ""
-"Para :ref:`dynamically allocated type objects <heap-types>`, este debe ser "
+"Para :ref:`objetos de tipo dinámicamente asignados <heap-types>`, éste debe ser "
 "sólo el nombre del tipo, y el nombre del módulo almacenado explícitamente en "
 "el dict tipo que el valor de ``'__module__'`` clave."
 
@@ -1393,7 +1393,7 @@ msgid ""
 "accessible as the :attr:`__module__` attribute, and everything after the "
 "last dot is made accessible as the :attr:`~definition.__name__` attribute."
 msgstr ""
-"Para :ref:`statically allocated type objects <static-types>`, el campo "
+"Para :ref:`objetos de tipo estáticamente asignados <static-types>`, el campo "
 "*tp_name* debe contener un punto. Todo lo que está antes del último punto se "
 "hace accesible como el atributo :attr:`__module__`, y todo lo que está "
 "después del último punto se hace accesible como el atributo :attr:"
@@ -2536,11 +2536,11 @@ msgid ""
 "it, as they are allowed to be removed even if the instance is still alive)."
 msgstr ""
 "Al implementar :c:member:`~PyTypeObject.tp_traverse`, solo se deben visitar "
-"los miembros que tienen la instancia *owns* (por tener :term:`strong "
-"references <strong reference>`). Por ejemplo, si un objeto admite "
+"los miembros que tienen la instancia *owns* (por tener :term:`referencias "
+"fuertes <strong reference>`). Por ejemplo, si un objeto admite "
 "referencias débiles a través de la ranura :c:member:`~PyTypeObject."
 "tp_weaklist`, el puntero que respalda la lista vinculada (a lo que apunta "
-"*tp_weaklist*) debe visitarse **not** ya que la instancia no posee "
+"*tp_weaklist*) **no** debe visitarse ya que la instancia no posee "
 "directamente las referencias débiles a sí misma (la lista de referencias "
 "débiles está ahí para respaldar la maquinaria de referencia débil, pero la "
 "instancia no tiene una fuerte referencia a los elementos dentro de ella, ya "
@@ -2677,7 +2677,7 @@ msgid ""
 "to determine that an object is no longer used, the cyclic garbage collector "
 "is not involved and :c:member:`~PyTypeObject.tp_dealloc` is called directly."
 msgstr ""
-"Tenga en cuenta que :c:member:`~PyTypeObject.tp_clear` no se llama *always* "
+"Tenga en cuenta que :c:member:`~PyTypeObject.tp_clear` no se llama *siempre* "
 "antes de que se desasigne una instancia. Por ejemplo, cuando el recuento de "
 "referencias es suficiente para determinar que un objeto ya no se utiliza, el "
 "recolector de basura cíclico no está involucrado y se llama directamente a :"
@@ -3311,7 +3311,7 @@ msgid ""
 "This slot has no default.  For :ref:`static types <static-types>`, if the "
 "field is ``NULL`` then no :attr:`__dict__` gets created for instances."
 msgstr ""
-"Esta ranura no tiene ningún valor predeterminado. Para :ref:`static types "
+"Esta ranura no tiene ningún valor predeterminado. Para :ref:`tipos estáticos "
 "<static-types>`, si el campo es ``NULL``, no se crea ningún :attr:`__dict__` "
 "para las instancias."
 
@@ -3371,7 +3371,7 @@ msgstr ""
 msgid ""
 "For :ref:`static types <static-types>` this field does not have a default."
 msgstr ""
-"Para :ref:`static types <static-types>`, este campo no tiene un valor "
+"Para :ref:`tipos estáticos <static-types>`, este campo no tiene un valor "
 "predeterminado."
 
 #: ../Doc/c-api/typeobj.rst:1780
@@ -3458,8 +3458,8 @@ msgid ""
 "`static types <static-types>` whose :c:member:`~PyTypeObject.tp_base` is "
 "``NULL`` or ``&PyBaseObject_Type``."
 msgstr ""
-"Este campo se hereda por subtipos, excepto que no lo hereda :ref:`static "
-"types <static-types>` cuyo :c:member:`~PyTypeObject.tp_base` es ``NULL`` o "
+"Este campo se hereda por subtipos, excepto que no lo heredan :ref:`tipos "
+"estáticos <static-types>` cuyo :c:member:`~PyTypeObject.tp_base` es ``NULL`` o "
 "``&PyBaseObject_Type``."
 
 #: ../Doc/c-api/typeobj.rst:1835
@@ -3469,7 +3469,7 @@ msgid ""
 "instances; presumably there is some other way to create instances, like a "
 "factory function."
 msgstr ""
-"Para :ref:`static types <static-types>`, este campo no tiene ningún valor "
+"Para :ref:`tipos estáticos <static-types>`, este campo no tiene ningún valor "
 "predeterminado. Esto significa que si la ranura se define como ``NULL``, no "
 "se puede llamar al tipo para crear nuevas instancias; presumiblemente hay "
 "alguna otra forma de crear instancias, como una función de fábrica."
@@ -3542,8 +3542,8 @@ msgid ""
 "ref:`dynamically allocated types <heap-types>`.)"
 msgstr ""
 "(El único ejemplo de esto son los tipos en sí. El metatipo, :c:data:"
-"`PyType_Type`, define esta función para distinguir entre estáticamente y :"
-"ref:`dynamically allocated types <heap-types>`)."
+"`PyType_Type`, define esta función para distinguir entre tipos estática y :"
+"ref:`dinámicamente asignados <heap-types>`)."
 
 #: ../Doc/c-api/typeobj.rst:1887
 msgid ""
@@ -3771,7 +3771,7 @@ msgid ""
 "created by Python's ``class`` statement. Heap types have the :const:"
 "`Py_TPFLAGS_HEAPTYPE` flag set."
 msgstr ""
-"Una alternativa a :ref:`static types <static-types>` es *heap-allocated "
+"Una alternativa a :ref:`tipos estáticos <static-types>` es *heap-allocated "
 "types*, o *heap types* para abreviar, que se corresponden estrechamente con "
 "las clases creadas por la declaración ``class`` de Python. Los tipos de "
 "montón tienen establecida la bandera :const:`Py_TPFLAGS_HEAPTYPE`."
@@ -4362,7 +4362,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:2575
 msgid "A basic :ref:`static type <static-types>`::"
-msgstr "Un :ref:`static type <static-types>` básico:"
+msgstr "Un :ref:`tipo estático <static-types>` básico:"
 
 #: ../Doc/c-api/typeobj.rst:2592
 msgid ""
@@ -4392,7 +4392,7 @@ msgstr ""
 msgid ""
 "The simplest :ref:`static type <static-types>` with fixed-length instances::"
 msgstr ""
-"El :ref:`static type <static-types>` más simple con instancias de longitud "
+"El :ref:`tipo estático <static-types>` más simple con instancias de longitud "
 "fija:"
 
 #: ../Doc/c-api/typeobj.rst:2693
@@ -4400,5 +4400,5 @@ msgid ""
 "The simplest :ref:`static type <static-types>` with variable-length "
 "instances::"
 msgstr ""
-"El :ref:`static type <static-types>` más simple con instancias de longitud "
+"El :ref:`tipo estático <static-types>` más simple con instancias de longitud "
 "variable:"
