--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -1199,7 +1199,7 @@ msgid ""
 msgstr ""
 "Este es el recuento de referencias del objeto de tipo, inicializado a ``1`` "
 "por la macro ``PyObject_HEAD_INIT``. Tenga en cuenta que para :ref:"
-"`statically allocated type objects <static-types>`, las instancias del tipo "
+"`objetos de tipo estáticamente asignados <static-types>`, las instancias del tipo "
 "(objetos cuyo :attr:`ob_type` apunta al tipo) *no* cuentan como referencias. "
 "Pero para :ref:`objetos de tipo asignados dinámicamente <heap-types>`, las "
 "instancias *sí* cuentan como referencias."
