usar heap en español y no traducir a montón

--- a/c-api/typeobj.po
+++ b/c-api/typeobj.po
@@ -1198,8 +1198,8 @@ msgid ""
 "as references."
 msgstr ""
 "Este es el recuento de referencias del objeto de tipo, inicializado a ``1`` "
-"por la macro ``PyObject_HEAD_INIT``. Tenga en cuenta que para :ref:"
-"`objetos de tipo estáticamente asignados <static-types>`, las instancias del tipo "
+"por la macro ``PyObject_HEAD_INIT``. Tenga en cuenta que para :ref:`objetos "
+"de tipo estáticamente asignados <static-types>`, las instancias del tipo "
 "(objetos cuyo :attr:`ob_type` apunta al tipo) *no* cuentan como referencias. "
 "Pero para :ref:`objetos de tipo asignados dinámicamente <heap-types>`, las "
 "instancias *sí* cuentan como referencias."
@@ -1335,8 +1335,8 @@ msgid ""
 "types>`, this field has a special internal meaning."
 msgstr ""
 "Para :ref:`objetos de tipo estáticamente asignados <static-types>`, debe "
-"inicializarse a cero. Para :ref:`objetos de tipo dinámicamente asignados <heap-"
-"types>`, este campo tiene un significado interno especial."
+"inicializarse a cero. Para :ref:`objetos de tipo dinámicamente asignados "
+"<heap-types>`, este campo tiene un significado interno especial."
 
 #: ../Doc/c-api/typeobj.rst:559
 msgid "PyTypeObject Slots"
@@ -1382,9 +1382,9 @@ msgid ""
 "be the type name, and the module name explicitly stored in the type dict as "
 "the value for key ``'__module__'``."
 msgstr ""
-"Para :ref:`objetos de tipo dinámicamente asignados <heap-types>`, éste debe ser "
-"sólo el nombre del tipo, y el nombre del módulo almacenado explícitamente en "
-"el dict tipo que el valor de ``'__module__'`` clave."
+"Para :ref:`objetos de tipo dinámicamente asignados <heap-types>`, éste debe "
+"ser sólo el nombre del tipo, y el nombre del módulo almacenado "
+"explícitamente en el dict tipo que el valor de ``'__module__'`` clave."
 
 #: ../Doc/c-api/typeobj.rst:581
 msgid ""
@@ -1581,7 +1581,7 @@ msgid ""
 "calling the type deallocator. In order to avoid dangling pointers, the "
 "recommended way to achieve this is:"
 msgstr ""
-"Finalmente, si el tipo está asignado en el montón (:const:"
+"Finalmente, si el tipo está asignado en el heap (:const:"
 "`Py_TPFLAGS_HEAPTYPE`), el desasignador debería disminuir el conteo de "
 "referencia para su objeto tipo después de llamar al desasignador del tipo. "
 "Para evitar punteros colgantes, la forma recomendada de lograr esto es:"
@@ -1637,7 +1637,7 @@ msgid ""
 "*tp_call* is updated, likely making it inconsistent with the vectorcall "
 "function."
 msgstr ""
-"No se recomienda para :ref:`tipos de pila <heap-types>` para implementar el "
+"No se recomienda para :ref:`tipos heap <heap-types>` para implementar el "
 "protocolo vectorcall. Cuando un usuario establece :attr:`__call__` en código "
 "Python, solo se actualiza *tp_call*, lo que probablemente lo haga "
 "inconsistente con la función vectorcall."
@@ -1672,7 +1672,7 @@ msgstr ""
 "`Py_TPFLAGS_HAVE_VECTORCALL` no siempre se hereda. Si no es así, la subclase "
 "no usará :ref:`vectorcall <vectorcall>`, excepto cuando se llame "
 "explícitamente a :c:func:`PyVectorcall_Call`. Este es en particular el caso "
-"de :ref:`heap types <heap-types>` (incluidas las subclases definidas en "
+"de :ref:`tipos heap <heap-types>` (incluidas las subclases definidas en "
 "Python)."
 
 #: ../Doc/c-api/typeobj.rst:743
@@ -2161,7 +2161,7 @@ msgid ""
 "instances of subtypes; only the type referenced by the instance's ob_type "
 "gets INCREF'ed or DECREF'ed)."
 msgstr ""
-"Este bit se establece cuando el objeto de tipo se asigna en el montón, por "
+"Este bit se establece cuando el objeto de tipo se asigna en el heap, por "
 "ejemplo, los tipos creados dinámicamente usando :c:func:`PyType_FromSpec`. "
 "En este caso, el campo :attr:`ob_type` de sus instancias se considera una "
 "referencia al tipo, y el objeto de tipo se llama *INCREF* cuando se crea una "
@@ -2291,7 +2291,7 @@ msgid ""
 "extension types, it is inherited whenever :c:member:`~PyTypeObject."
 "tp_descr_get` is inherited."
 msgstr ""
-"Esta bandera nunca es heredada por :ref:`heap types <heap-types>`. Para los "
+"Esta bandera nunca es heredada por :ref:`tipos heap <heap-types>`. Para los "
 "tipos de extensión, se hereda siempre que se hereda :c:member:`~PyTypeObject."
 "tp_descr_get`."
 
@@ -2347,7 +2347,7 @@ msgid ""
 "not inherit ``Py_TPFLAGS_HAVE_VECTORCALL``."
 msgstr ""
 "Este bit se hereda para :ref:`static subtypes <static-types>` si también se "
-"hereda :c:member:`~PyTypeObject.tp_call`. :ref:`Heap types <heap-types>` no "
+"hereda :c:member:`~PyTypeObject.tp_call`. :ref:`Tipos heap <heap-types>` no "
 "hereda ``Py_TPFLAGS_HAVE_VECTORCALL``."
 
 #: ../Doc/c-api/typeobj.rst:1182
@@ -2537,14 +2537,14 @@ msgid ""
 msgstr ""
 "Al implementar :c:member:`~PyTypeObject.tp_traverse`, solo se deben visitar "
 "los miembros que tienen la instancia *owns* (por tener :term:`referencias "
-"fuertes <strong reference>`). Por ejemplo, si un objeto admite "
-"referencias débiles a través de la ranura :c:member:`~PyTypeObject."
-"tp_weaklist`, el puntero que respalda la lista vinculada (a lo que apunta "
-"*tp_weaklist*) **no** debe visitarse ya que la instancia no posee "
-"directamente las referencias débiles a sí misma (la lista de referencias "
-"débiles está ahí para respaldar la maquinaria de referencia débil, pero la "
-"instancia no tiene una fuerte referencia a los elementos dentro de ella, ya "
-"que pueden eliminarse incluso si la instancia todavía está viva)."
+"fuertes <strong reference>`). Por ejemplo, si un objeto admite referencias "
+"débiles a través de la ranura :c:member:`~PyTypeObject.tp_weaklist`, el "
+"puntero que respalda la lista vinculada (a lo que apunta *tp_weaklist*) "
+"**no** debe visitarse ya que la instancia no posee directamente las "
+"referencias débiles a sí misma (la lista de referencias débiles está ahí "
+"para respaldar la maquinaria de referencia débil, pero la instancia no tiene "
+"una fuerte referencia a los elementos dentro de ella, ya que pueden "
+"eliminarse incluso si la instancia todavía está viva)."
 
 #: ../Doc/c-api/typeobj.rst:1313
 msgid ""
@@ -2567,9 +2567,9 @@ msgstr ""
 "Las instancias de :ref:`heap-allocated types <heap-types>` contienen una "
 "referencia a su tipo. Por lo tanto, su función transversal debe visitar :c:"
 "func:`Py_TYPE(self) <Py_TYPE>` o delegar esta responsabilidad llamando a "
-"``tp_traverse`` de otro tipo asignado al montón (como una superclase "
-"asignada al montón). Si no es así, es posible que el objeto de tipo no se "
-"recolecte como basura."
+"``tp_traverse`` de otro tipo asignado al heap (como una superclase asignada "
+"al heap). Si no es así, es posible que el objeto de tipo no se recolecte "
+"como basura."
 
 #: ../Doc/c-api/typeobj.rst:1326
 msgid ""
@@ -2577,7 +2577,7 @@ msgid ""
 "``tp_traverse``.  In earlier versions of Python, due to `bug 40217 <https://"
 "bugs.python.org/issue40217>`_, doing this may lead to crashes in subclasses."
 msgstr ""
-"Se espera que los tipos asignados al montón visiten ``Py_TYPE(self)`` en "
+"Se espera que los tipos asignados al heap visiten ``Py_TYPE(self)`` en "
 "``tp_traverse``. En versiones anteriores de Python, debido al `bug 40217 "
 "<https://bugs.python.org/issue40217>`_, hacer esto puede provocar fallas en "
 "las subclases."
@@ -3392,7 +3392,7 @@ msgid ""
 "`PyType_GenericAlloc`, to force a standard heap allocation strategy."
 msgstr ""
 "Para subtipos dinámicos, este campo siempre se establece en :c:func:"
-"`PyType_GenericAlloc`, para forzar una estrategia de asignación de montón "
+"`PyType_GenericAlloc`, para forzar una estrategia de asignación de heap "
 "estándar."
 
 #: ../Doc/c-api/typeobj.rst:1797
@@ -3459,8 +3459,8 @@ msgid ""
 "``NULL`` or ``&PyBaseObject_Type``."
 msgstr ""
 "Este campo se hereda por subtipos, excepto que no lo heredan :ref:`tipos "
-"estáticos <static-types>` cuyo :c:member:`~PyTypeObject.tp_base` es ``NULL`` o "
-"``&PyBaseObject_Type``."
+"estáticos <static-types>` cuyo :c:member:`~PyTypeObject.tp_base` es ``NULL`` "
+"o ``&PyBaseObject_Type``."
 
 #: ../Doc/c-api/typeobj.rst:1835
 msgid ""
@@ -3762,7 +3762,7 @@ msgstr ""
 
 #: ../Doc/c-api/typeobj.rst:2052
 msgid "Heap Types"
-msgstr "Tipos Montículos (*Heap Types*)"
+msgstr "Tipos Heap"
 
 #: ../Doc/c-api/typeobj.rst:2054
 msgid ""
@@ -3772,9 +3772,9 @@ msgid ""
 "`Py_TPFLAGS_HEAPTYPE` flag set."
 msgstr ""
 "Una alternativa a :ref:`tipos estáticos <static-types>` es *heap-allocated "
-"types*, o *heap types* para abreviar, que se corresponden estrechamente con "
-"las clases creadas por la declaración ``class`` de Python. Los tipos de "
-"montón tienen establecida la bandera :const:`Py_TPFLAGS_HEAPTYPE`."
+"types*, o *tipos heap* para abreviar, que se corresponden estrechamente con "
+"las clases creadas por la declaración ``class`` de Python. Los tipos de heap "
+"tienen establecida la bandera :const:`Py_TPFLAGS_HEAPTYPE`."
 
 #: ../Doc/c-api/typeobj.rst:2059
 msgid ""
