--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -372,8 +372,8 @@ msgid ""
 "config`)."
 msgstr ""
 "Si no se da ninguna opción de interfaz, :option:`-i` está implícita, ``sys."
-"argv[0]`` es una cadena vacía (``\"\"``) y el directorio actual se agregará al "
-"inicio de :data:`sys.path`.  Además, la finalización de tabulación y la "
+"argv[0]`` es una cadena vacía (``\"\"``) y el directorio actual se agregará "
+"al inicio de :data:`sys.path`.  Además, la finalización de tabulación y la "
 "edición del historial se habilitan automáticamente, si están disponibles en "
 "su plataforma (consulte :ref:`rlcompleter-config`)."
 
