--- a/using/unix.po
+++ b/using/unix.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2020-10-05 20:17+0200\n"
 "Last-Translator: \n"
-"Language: es_ES\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "Generated-By: Babel 2.9.1\n"
 
 #: ../Doc/using/unix.rst:7
@@ -147,15 +147,14 @@ msgid "The build process consists of the usual commands::"
 msgstr "El proceso de construcción consta de los comandos habituales::"
 
 #: ../Doc/using/unix.rst:81
-#, fuzzy
 msgid ""
 ":ref:`Configuration options <configure-options>` and caveats for specific "
 "Unix platforms are extensively documented in the :source:`README.rst` file "
 "in the root of the Python source tree."
 msgstr ""
-"Las opciones de configuración y las advertencias para plataformas Unix "
-"específicas están ampliamente documentadas en el fichero :source:`README."
-"rst` del árbol de origen."
+":ref:`Configuration options <configure-options>` y las advertencias para "
+"plataformas Unix específicas están ampliamente documentadas en el archivo: "
+"source: `README.rst` en la raíz del árbol de fuentes de Python."
 
 #: ../Doc/using/unix.rst:87
 msgid ""
@@ -280,7 +279,7 @@ msgstr ""
 
 #: ../Doc/using/unix.rst:141
 msgid "Custom OpenSSL"
-msgstr ""
+msgstr "OpenSSL personalizado"
 
 #: ../Doc/using/unix.rst:143
 msgid ""
@@ -290,18 +289,27 @@ msgid ""
 "directory should also contain a ``cert.pem`` file and/or a ``certs`` "
 "directory."
 msgstr ""
+"Para utilizar la configuración de OpenSSL de su proveedor y el almacén de "
+"confianza del sistema, busque el directorio con el archivo ``openssl.cnf`` o "
+"el enlace simbólico en ``/etc``. En la mayoría de las distribuciones, el "
+"archivo está en ``/etc/ssl`` o ``/etc/pki/tls``. El directorio también debe "
+"contener un archivo ``cert.pem`` y / o un directorio ``certs``."
 
 #: ../Doc/using/unix.rst:154
 msgid ""
 "Download, build, and install OpenSSL. Make sure you use ``install_sw`` and "
 "not ``install``. The ``install_sw`` target does not override ``openssl.cnf``."
 msgstr ""
+"Descargue, compile e instale OpenSSL. Asegúrese de utilizar ``install_sw`` y "
+"no ``install``. El destino ``install_sw`` no anula ``openssl.cnf``."
 
 #: ../Doc/using/unix.rst:172
 msgid ""
 "Build Python with custom OpenSSL (see the configure `--with-openssl` and `--"
 "with-openssl-rpath` options)"
 msgstr ""
+"Compile Python con OpenSSL personalizado (consulte las opciones configure `--"
+"with-openssl` y` --with-openssl-rpath`)"
 
 #: ../Doc/using/unix.rst:187
 msgid ""
@@ -309,3 +317,7 @@ msgid ""
 "recompile Python to update OpenSSL. It's sufficient to replace the custom "
 "OpenSSL installation with a newer version."
 msgstr ""
+"Las versiones de parche de OpenSSL tienen una ABI compatible con versiones "
+"anteriores. No es necesario volver a compilar Python para actualizar "
+"OpenSSL. Es suficiente reemplazar la instalación personalizada de OpenSSL "
+"con una versión más nueva."
