Fix :source: en script de traducción y adaptando traducción

--- a/using/unix.po
+++ b/using/unix.po
@@ -152,9 +152,9 @@ msgid ""
 "Unix platforms are extensively documented in the :source:`README.rst` file "
 "in the root of the Python source tree."
 msgstr ""
-":ref:`Configuration options <configure-options>` y las advertencias para "
-"plataformas Unix específicas están ampliamente documentadas en el archivo: "
-"source: `README.rst` en la raíz del árbol de fuentes de Python."
+":ref:`Opciones de configuración <configure-options>` y las advertencias para "
+"plataformas Unix específicas están ampliamente documentadas en el archivo :"
+"source:`README.rst` en la raíz del árbol de fuentes de Python."
 
 #: ../Doc/using/unix.rst:87
 msgid ""
