Finalizando archivos con entradas fuzzy

--- a/faq/programming.po
+++ b/faq/programming.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
 "PO-Revision-Date: 2021-12-11 15:36-0300\n"
 "Last-Translator: Juan C. Tello <juanctello@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.9.1\n"
 "X-Generator: Poedit 3.0\n"
 
@@ -2738,18 +2738,17 @@ msgstr ""
 "booleanos que se evalúen como falsos."
 
 #: ../Doc/faq/programming.rst:1821
-#, fuzzy
 msgid ""
 "2) Detecting optional arguments can be tricky when ``None`` is a valid input "
 "value.  In those situations, you can create an singleton sentinel object "
 "guaranteed to be distinct from other objects.  For example, here is how to "
 "implement a method that behaves like :meth:`dict.pop`::"
 msgstr ""
-"2) Detectar argumentos opcionales puede ser complicado cuando ``None`` es un "
-"valor de entrada válido.  En esas situaciones, puedes crear un objeto "
-"singleton centinela que esté garantizado de ser distinto de otros objetos.  "
-"Por ejemplo, acá está como implementar un método que se comporta como :meth:"
-"`dict.pop`::"
+"2) La detección de argumentos opcionales puede resultar complicada cuando "
+"``None`` es un valor de entrada válido. En esas situaciones, puede crear un "
+"objeto centinela singleton garantizado para ser distinto de otros objetos. "
+"Por ejemplo, aquí se explica cómo implementar un método que se comporta "
+"como :meth:`dict.pop`:"
 
 #: ../Doc/faq/programming.rst:1837
 msgid ""
