Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -674,7 +674,7 @@ msgid ""
 "keywords>`."
 msgstr ""
 "Esta sección utiliza comillas simples para denotar las :ref:`palabras clave "
-"<soft-keywords>` suaves."
+"suaves <soft-keywords>`."
 
 # Se utilizó valor de búsqueda para traducir *subject value* basándose en la traducción francesa *champ de recherche*.
 #: ../Doc/reference/compound_stmts.rst:542
@@ -706,8 +706,8 @@ msgstr ""
 msgid ""
 "The ``match`` and ``case`` keywords are :ref:`soft keywords <soft-keywords>`."
 msgstr ""
-"Las palabras clave ``match`` y ``case`` son :ref:`palabras clave <soft-"
-"keywords>` suaves."
+"Las palabras clave ``match`` y ``case`` son :ref:`palabras clave suaves <soft-"
+"keywords>`."
 
 #: ../Doc/reference/compound_stmts.rst:555
 #: ../Doc/reference/compound_stmts.rst:1109
