Se corre powrap localmente para pasar CI

--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -706,8 +706,8 @@ msgstr ""
 msgid ""
 "The ``match`` and ``case`` keywords are :ref:`soft keywords <soft-keywords>`."
 msgstr ""
-"Las palabras clave ``match`` y ``case`` son :ref:`palabras clave suaves <soft-"
-"keywords>`."
+"Las palabras clave ``match`` y ``case`` son :ref:`palabras clave suaves "
+"<soft-keywords>`."
 
 #: ../Doc/reference/compound_stmts.rst:555
 #: ../Doc/reference/compound_stmts.rst:1109
